@@ -1,6 +1,16 @@
 devel
 -----
 
+* Added option `--enable-revision-trees` to arangorestore, which will add the 
+  attributes `syncByRevision` and `usesRevisionsAsDocumentIds` to the 
+  collection structure if they are missing. As a consequence, these collections
+  created by arangorestore will be able to use revision trees and a faster
+  getting-in-sync procedure after a restart. The option defaults to `true`,
+  meaning the attributes will be added if they are missing. If the option is
+  set to `false`, the attributes will not be added to the collection structure.
+  If the attributes are already present in the dump data, they will not be 
+  modified by arangorestore irrespective of the setting of this option.
+
 * Added startup option `--cluster.shard-synchronization-attempt-timeout` to
   limit the amount of time to spend in shard synchronization attempts. The
   default timeout value is 20 minutes.
